# ComputationalIntelligence

./: readme.md  report computational.docx  ~$port computational.docx
halloween/: Halloween.ipynb  challenge.ipynb  first_improvement.txt  pyproject.toml  results.md  simul_annealing.txt  steepest_step.txt  tabu_search.txt
lab10/: lab10.ipynb  pyproject.toml  readme.md
lab2/: lab2-nim.ipynb  pyproject.toml  readme.md
lab9/: lab9.ipynb  pyproject.toml
quixo/: game.py  main.ipynb  main.py  my_test.ipynb  players.py  pyproject.toml  readme.md
set_covering/: pyproject.toml  set-covering.ipynb
