[tool.poetry]
name = "halloween"
version = "0.1.0"
description = ""
authors = ["MarcoCirone00 <s314878@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
numpy = "^1.26.1"
scipy = "^1.11.3"
ipykernel = "^6.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
