[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["MarcoCirone00 <s314878@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.26.0"
numpy = "^1.26.1"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"
enlighten = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
