[tool.poetry]
name = "set-covering"
version = "0.1.0"
description = ""
authors = ["MarcoCirone00 <s314878@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
